--- a/About.html
+++ b/About.html
@@ -3,7 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>О Нас - Наша Компания</title>
+    <title>О Нас</title>
+    <link rel="icon" href="icon.png" sizes="any" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="5prFlexbox.css" />
+    <link rel="stylesheet" href="7_Prak.css" />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+    <!-- Bootstrap JS (Popper.js и Bootstrap JS) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        // При нажатии на кнопку с классом "navbar-toggler"
+        $(".navbar-toggler").click(function () {
+          // Переключаем состояние элементов с идентификатором "navbarNavAltMarkup"
+          $("#navbarNavAltMarkup").toggleClass("show");
+        });
+      });
+    </script>
     <style>
       /* Базовые стили */
       body {
@@ -18,13 +47,6 @@
         );
         color: #333;
         animation: fadeIn ease 1s;
-      }
-
-      header {
-        background-color: #fff;
-        color: #fff;
-        text-align: center;
-        padding: 20px;
       }
 
       section {
@@ -156,7 +178,33 @@
   </head>
   <body>
     <header>
-      <h1>О Нас - Эксперты по Компьютерам и Комплектующим</h1>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand p-0" href="#">
+            <img src="VitNar.png" alt="Logo" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="index.html">Главная</a>
+              <a class="nav-link" href="New.html">For foreigners</a>
+              <a class="nav-link" href="Регистрация.html">Регистрация</a>
+              <a class="nav-link" href="11_Prak.html">Магазин</a>
+              <a class="nav-link active" aria-current="page" href="#">О Нас</a>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
 
     <section>
