--- a/New.html
+++ b/New.html
@@ -11,7 +11,26 @@
       integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9"
       crossorigin="anonymous"
     />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
 
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+    <!-- Bootstrap JS (Popper.js и Bootstrap JS) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      $(document).ready(function () {
+        // При нажатии на кнопку с классом "navbar-toggler"
+        $(".navbar-toggler").click(function () {
+          // Переключаем состояние элементов с идентификатором "navbarNavAltMarkup"
+          $("#navbarNavAltMarkup").toggleClass("show");
+        });
+      });
+    </script>
     <style>
       body {
         font-family: "Arial", sans-serif;
@@ -36,6 +55,38 @@
   </head>
 
   <body>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand p-0" href="#">
+            <img src="VitNar.png" alt="Logo" />
+          </a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+              <a class="nav-link" href="index.html">Главная</a>
+              <a class="nav-link active" aria-current="page" href="#"
+                >For foreigners</a
+              >
+              <a class="nav-link" href="Регистрация.html">Регистрация</a>
+              <a class="nav-link" href="11_Prak.html">Магазин</a>
+              <a class="nav-link" href="About.html">О Нас</a>
+            </div>
+          </div>
+        </div>
+      </nav>
+    </header>
+
     <div11>
       <div class="cws_container">
         <div class="cws_box">
