--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Компьютер и его комплектующие</title>
     <link rel="icon" href="icon.png" sizes="any">
     
+<!-- Bootstrap CSS -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+<!-- jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+
+<!-- Bootstrap JS (Popper.js и Bootstrap JS) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -75,6 +85,16 @@
 
 
   <body>
+    <script>
+      $(document).ready(function() {
+        // При нажатии на кнопку с классом "navbar-toggler"
+        $(".navbar-toggler").click(function() {
+          // Переключаем состояние элементов с идентификатором "navbarNavAltMarkup"
+          $("#navbarNavAltMarkup").toggleClass("show");
+        });
+      });
+    </script>
+    
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
